<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.da0hn</groupId>
    <artifactId>advanced-graph-algorithms</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>graph-theory-overview</module>
        <module>breadth-first-search</module>
        <module>depth-first-search</module>
        <module>topological-ordering</module>
    </modules>

    <properties>
        <maven.compiler.source>${project.maven.compiler.source}</maven.compiler.source>
        <maven.compiler.target>${project.maven.compiler.source}</maven.compiler.target>
        <project.build.sourceEncoding>${project.project.build.sourceEncoding}</project.build.sourceEncoding>
        <project.maven.compiler.source>21</project.maven.compiler.source>
        <project.project.build.sourceEncoding>UTF-8</project.project.build.sourceEncoding>
        <maven-compiler-plugin.compilerArgs>--enable-preview</maven-compiler-plugin.compilerArgs>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${project.maven.compiler.source}</source>
                    <target>${project.maven.compiler.source}</target>
                    <compilerArgs>${maven-compiler-plugin.compilerArgs}</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
